fix(example): relative paths and charset

--- a/example/index.html
+++ b/example/index.html
@@ -3,6 +3,7 @@
 <html ng-app="project">
 
 <head>
+    <meta charset="utf-8" />
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular-resource.min.js">
     </script>
@@ -10,8 +11,8 @@
     </script>
     <script src="https://cdn.firebase.com/js/client/2.0.4/firebase.js"></script>
     <script src="https://cdn.firebase.com/libs/angularfire/0.9.0/angularfire.min.js"></script>
-    <script src="project.js"></script>
-    <script src="project-list.js"></script>
+    <script src="/project.js"></script>
+    <script src="/project-list.js"></script>
     <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.0.4/css/bootstrap-combined.min.css">
 </head>
 
